--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>css-animations</title>
+  <link rel="stylesheet" href="public/css/main.css">
 </head>
 <body>
   <h1>Hello</h1>
+
 </body>
 </html>
