MY FIRST CSS ANIMATION WOW

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
   <link rel="stylesheet" href="public/css/main.css">
 </head>
 <body>
-  <h1>Hello</h1>
-
+  <div class="square"></div>
 </body>
 </html>
